spec/e2e/function/__local_mutual_recursion.lit
{
  fn is_even { |n|
    if n == 0 { return true; }
    return is_odd(n - 1); # error: [line 4] Undefined variable 'is_odd'.
  }

  fn is_odd { |n|
    if n == 0 { return false; }
    return is_even(n - 1);
  }

  is_even(4);
}
